--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com.laioffer'
+group = 'com.tpd'
 version = '0.0.1-SNAPSHOT'
 
 java {
